# sdr

./: .gitignore  README.md
documentation/: filterCoeff.ods
hardware/sdr_analogic/: audio.sch-bak  audioOut.sch  audioOut.sch-bak  cpu.sch  fp-info-cache  fp-lib-table  mixer.sch-bak  power.sch-bak  sdr-cache.lib  sdr.lib  sdr.pro  sdr.sch  sdr.sch-bak  sym-lib-table  ui.sch
hardware/sdr_analogic/3dModels/: models-691213510002.step  models-EADOGM128W-6.step  models-EVPASCB1A.step  models-MP-K7805-500R3.step  models-MP008516.step  models.FCStd  models.FCStd1
hardware/sdr_analogic/sdr_analogic.pretty/: ETC4-1-2TR.kicad_mod  LM-NP-1001-B1L.kicad_mod  RPi_Pico_SMD_TH.kicad_mod  XRCGB25M000F1H00R0.kicad_mod
software/uSDR-pico/: .cproject  .project  CMakeLists.txt  dsp.c  dsp.h  hmi.c  lcd.c  lcd.h  si5351.c  si5351.h  uSDR.c
software/uSDR-pico/pico-ss-oled/: CMakeLists.txt  ss_oled.c
